api_versioned_docs/version-12.1.0/avalonia/controls/automation/peers/embeddablecontrolrootautomationpeer.mdx
---
title: 'EmbeddableControlRootAutomationPeer'
hide_title: true
slug: '/avalonia/controls/automation/peers/embeddablecontrolrootautomationpeer'
uid: 'Avalonia.Controls.Automation.Peers.EmbeddableControlRootAutomationPeer'
commentId: 'T:Avalonia.Controls.Automation.Peers.EmbeddableControlRootAutomationPeer'
docset: 'avalonia-docs'
packageId: 'Avalonia'
assembly: 'Avalonia.Controls'
apiKind: 'Class'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.Controls.Automation.Peers'
tfms:
  - 'net10.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">EmbeddableControlRootAutomationPeer Class</h1>

## Definition

<div className="apiref-page__definition-meta">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Namespace:</span> <a href="./">Avalonia.Controls.Automation.Peers</a>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Assembly:</span> <code>Avalonia.Controls</code>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Package:</span> <code>Avalonia</code>
</div>
</div>

<div className="apiref-page__signature">

```csharp
public class EmbeddableControlRootAutomationPeer
```

</div>

<div className="apiref-page__relations">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Inheritance:</span> object <span className="apiref-page__relation-separator">-&gt;</span> <a href="../../../automation/peers/automationpeer">AutomationPeer</a> <span className="apiref-page__relation-separator">-&gt;</span> <a href="../../../automation/peers/controlautomationpeer">ControlAutomationPeer</a> <span className="apiref-page__relation-separator">-&gt;</span> <a href="../../../automation/peers/contentcontrolautomationpeer">ContentControlAutomationPeer</a> <span className="apiref-page__relation-separator">-&gt;</span> EmbeddableControlRootAutomationPeer
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Implements:</span> <a href="../../../automation/provider/iembeddedrootprovider">IEmbeddedRootProvider</a>, <a href="../../../automation/provider/irootprovider">IRootProvider</a>
</div>
</div>

## Constructors

| Name | Description |
| --- | --- |
| [EmbeddableControlRootAutomationPeer](#uid-519c8eca60) | No summary available. |

<section className="apiref-page__member-entry">

<span id="uid-519c8eca60"></span>

### EmbeddableControlRootAutomationPeer Constructor

```csharp
public EmbeddableControlRootAutomationPeer(Avalonia.Controls.Embedding.EmbeddableControlRoot owner)
```

#### Parameters

`owner` [Avalonia.Controls.Embedding.EmbeddableControlRoot](xref:Avalonia.Controls.Embedding.EmbeddableControlRoot)


</section>

## Methods

| Name | Description |
| --- | --- |
| [GetFocus](#uid-b3add252b5) | No summary available. |
| [GetPeerFromPoint](#uid-07a5e40a3f) | No summary available. |
| [CreatePeerForElement](../../../automation/peers/controlautomationpeer.mdx#uid-01e76040e7) | Gets the [Avalonia.Automation.Peers.AutomationPeer](xref:Avalonia.Automation.Peers.AutomationPeer) for a [Avalonia.Controls.Control](xref:Avalonia.Controls.Control), creating it if necessary. Inherited from [ControlAutomationPeer](../../../automation/peers/controlautomationpeer.mdx). |
| [FromElement](../../../automation/peers/controlautomationpeer.mdx#uid-f0c358c33d) | Gets an existing [Avalonia.Automation.Peers.AutomationPeer](xref:Avalonia.Automation.Peers.AutomationPeer) for a [Avalonia.Controls.Control](xref:Avalonia.Controls.Control). Inherited from [ControlAutomationPeer](../../../automation/peers/controlautomationpeer.mdx). |
| [GetOrCreate](../../../automation/peers/controlautomationpeer.mdx#uid-d5fc666c05) | Inherited from [ControlAutomationPeer](../../../automation/peers/controlautomationpeer.mdx). |
| [BringIntoView](../../../automation/peers/automationpeer.mdx#uid-0ce0c26ad7) | Attempts to bring the element associated with the automation peer into view. Inherited from [AutomationPeer](../../../automation/peers/automationpeer.mdx). |
| [GetAcceleratorKey](../../../automation/peers/automationpeer.mdx#uid-b27b870e23) | Gets the accelerator key combinations for the element that is associated with the UI Automation peer. Inherited from [AutomationPeer](../../../automation/peers/automationpeer.mdx). |
| [GetAccessKey](../../../automation/peers/automationpeer.mdx#uid-0c0606dfaf) | Gets the access key for the element that is associated with the automation peer. Inherited from [AutomationPeer](../../../automation/peers/automationpeer.mdx). |
| [GetAutomationControlType](../../../automation/peers/automationpeer.mdx#uid-f7daf3a583) | Gets the control type for the element that is associated with the UI Automation peer. Inherited from [AutomationPeer](../../../automation/peers/automationpeer.mdx). |
| [GetAutomationId](../../../automation/peers/automationpeer.mdx#uid-ec722c2168) | Gets the automation ID of the element that is associated with the UI Automation peer. Inherited from [AutomationPeer](../../../automation/peers/automationpeer.mdx). |
| [GetBoundingRectangle](../../../automation/peers/automationpeer.mdx#uid-f04c4b54df) | Gets the bounding rectangle of the element that is associated with the automation peer in top-level coordinates. Inherited from [AutomationPeer](../../../automation/peers/automationpeer.mdx). |
| [GetChildren](../../../automation/peers/automationpeer.mdx#uid-1974fa1efa) | Gets the child automation peers. Inherited from [AutomationPeer](../../../automation/peers/automationpeer.mdx). |
| [GetClassName](../../../automation/peers/automationpeer.mdx#uid-ee7505094d) | Gets a string that describes the class of the element. Inherited from [AutomationPeer](../../../automation/peers/automationpeer.mdx). |
| [GetHeadingLevel](../../../automation/peers/automationpeer.mdx#uid-52680c5dea) | Gets the heading level that is associated with this automation peer. Inherited from [AutomationPeer](../../../automation/peers/automationpeer.mdx). |
| [GetHelpText](../../../automation/peers/automationpeer.mdx#uid-3613ae2a30) | Gets text that provides help for the element that is associated with this automation peer. Inherited from [AutomationPeer](../../../automation/peers/automationpeer.mdx). |
| [GetItemStatus](../../../automation/peers/automationpeer.mdx#uid-798f219773) | Gets the item status that is associated with this automation peer. Inherited from [AutomationPeer](../../../automation/peers/automationpeer.mdx). |
| [GetItemType](../../../automation/peers/automationpeer.mdx#uid-d858421abf) | Gets the item type that is associated with this automation peer. Inherited from [AutomationPeer](../../../automation/peers/automationpeer.mdx). |
| [GetLabeledBy](../../../automation/peers/automationpeer.mdx#uid-98bd49471d) | Gets the automation peer for the label that is targeted to the element. Inherited from [AutomationPeer](../../../automation/peers/automationpeer.mdx). |
| [GetLandmarkType](../../../automation/peers/automationpeer.mdx#uid-57bba04eba) | Gets the control type for the element that is associated with the UI Automation peer. Inherited from [AutomationPeer](../../../automation/peers/automationpeer.mdx). |
| [GetLiveSetting](../../../automation/peers/automationpeer.mdx#uid-75007f578a) | Gets the current live setting that is associated with this this automation peer. Inherited from [AutomationPeer](../../../automation/peers/automationpeer.mdx). |
| [GetLocalizedControlType](../../../automation/peers/automationpeer.mdx#uid-262763e857) | Gets a human-readable localized string that represents the type of the control that is associated with this automation peer. Inherited from [AutomationPeer](../../../automation/peers/automationpeer.mdx). |
| [GetName](../../../automation/peers/automationpeer.mdx#uid-ac6dd5a547) | Gets text that describes the element that is associated with this automation peer. Inherited from [AutomationPeer](../../../automation/peers/automationpeer.mdx). |
| [GetParent](../../../automation/peers/automationpeer.mdx#uid-947969c77f) | Gets the [Avalonia.Automation.Peers.AutomationPeer](xref:Avalonia.Automation.Peers.AutomationPeer) that is the parent of this [Avalonia.Automation.Peers.AutomationPeer](xref:Avalonia.Automation.Peers.AutomationPeer). Inherited from [AutomationPeer](../../../automation/peers/automationpeer.mdx). |
| [GetPlaceholderText](../../../automation/peers/automationpeer.mdx#uid-1ced74e763) | Gets text that provides a placeholder for the element that is associated with this automation peer. Inherited from [AutomationPeer](../../../automation/peers/automationpeer.mdx). |
| [GetProvider](../../../automation/peers/automationpeer.mdx#uid-ee05fc8d1e) | Inherited from [AutomationPeer](../../../automation/peers/automationpeer.mdx). |
| [HasKeyboardFocus](../../../automation/peers/automationpeer.mdx#uid-5f0d3a3d10) | Gets a value that indicates whether the element that is associated with this automation peer currently has keyboard focus. Inherited from [AutomationPeer](../../../automation/peers/automationpeer.mdx). |
| [IsContentElement](../../../automation/peers/automationpeer.mdx#uid-5202d69eb1) | Gets a value that indicates whether the element that is associated with this automation peer contains data that is presented to the user. Inherited from [AutomationPeer](../../../automation/peers/automationpeer.mdx). |
| [IsControlElement](../../../automation/peers/automationpeer.mdx#uid-665cdd1957) | Gets a value that indicates whether the element is understood by the user as interactive or as contributing to the logical structure of the control in the GUI. Inherited from [AutomationPeer](../../../automation/peers/automationpeer.mdx). |
| [IsEnabled](../../../automation/peers/automationpeer.mdx#uid-cc55d0a61a) | Gets a value indicating whether the control is enabled for user interaction. Inherited from [AutomationPeer](../../../automation/peers/automationpeer.mdx). |
| [IsKeyboardFocusable](../../../automation/peers/automationpeer.mdx#uid-c9dfcdf842) | Gets a value that indicates whether the element can accept keyboard focus. Inherited from [AutomationPeer](../../../automation/peers/automationpeer.mdx). |
| [IsOffscreen](../../../automation/peers/automationpeer.mdx#uid-72084dcbfb) | Gets a value that indicates whether an element is off the screen. Inherited from [AutomationPeer](../../../automation/peers/automationpeer.mdx). |
| [RaisePropertyChangedEvent](../../../automation/peers/automationpeer.mdx#uid-ffcc0e3d63) | Raises an event to notify the automation client of a changed property value. Inherited from [AutomationPeer](../../../automation/peers/automationpeer.mdx). |
| [SetFocus](../../../automation/peers/automationpeer.mdx#uid-6a8d233e48) | Sets the keyboard focus on the element that is associated with this automation peer. Inherited from [AutomationPeer](../../../automation/peers/automationpeer.mdx). |
| [ShowContextMenu](../../../automation/peers/automationpeer.mdx#uid-8bfe04d25b) | Shows the context menu for the element that is associated with this automation peer. Inherited from [AutomationPeer](../../../automation/peers/automationpeer.mdx). |
| [ToScreen](../../../automation/peers/automationpeer.mdx#uid-51bb13f806) | Converts a rectangle in the peer's coordinate space, as returned by [Avalonia.Automation.Peers.AutomationPeer.GetBoundingRectangle](xref:Avalonia.Automation.Peers.AutomationPeer.GetBoundingRectangle), to screen coordinates; returns null if the peer is not currently hosted in a rendered visual tree. Inherited from [AutomationPeer](../../../automation/peers/automationpeer.mdx). |

<section className="apiref-page__member-entry">

<span id="uid-b3add252b5"></span>

### GetFocus Method

```csharp
public Avalonia.Automation.Peers.AutomationPeer GetFocus()
```

#### Returns

[Avalonia.Automation.Peers.AutomationPeer](xref:Avalonia.Automation.Peers.AutomationPeer)


</section>

<section className="apiref-page__member-entry">

<span id="uid-07a5e40a3f"></span>

### GetPeerFromPoint Method

```csharp
public Avalonia.Automation.Peers.AutomationPeer GetPeerFromPoint(Avalonia.Point p)
```

#### Parameters

`p` [Avalonia.Point](xref:Avalonia.Point)


#### Returns

[Avalonia.Automation.Peers.AutomationPeer](xref:Avalonia.Automation.Peers.AutomationPeer)


</section>

## Properties

| Name | Description |
| --- | --- |
| [Owner](#uid-89d19c6447) | No summary available. |

<section className="apiref-page__member-entry">

<span id="uid-89d19c6447"></span>

### Owner Property

```csharp
public Avalonia.Controls.Embedding.EmbeddableControlRoot Owner { get; set; }
```

</section>

## Events

| Name | Description |
| --- | --- |
| [FocusChanged](#uid-27d55d0156) | No summary available. |
| [ChildrenChanged](../../../automation/peers/automationpeer.mdx#uid-d7771086b7) | Occurs when the children of the automation peer have changed. Inherited from [AutomationPeer](../../../automation/peers/automationpeer.mdx). |
| [PropertyChanged](../../../automation/peers/automationpeer.mdx#uid-7b87077a9e) | Occurs when a property value of the automation peer has changed. Inherited from [AutomationPeer](../../../automation/peers/automationpeer.mdx). |

<section className="apiref-page__member-entry">

<span id="uid-27d55d0156"></span>

### FocusChanged Event

```csharp
public event EventHandler FocusChanged
```

</section>

</ApiRefPage>

